--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "mdi": "^2.2.43",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-datetime": "^1.0.0-beta.14"
+    "vue-datetime": "^1.0.0-beta.14",
+    "vue-select": "^3.11.2"
   }
 }
